@@ -9,7 +9,7 @@
 .bad { color: red }
 </style>
 <title>dataplanes</title></head><body>
-release: freeRouter v26.1.12-cur, done by sprscc13@mrn0b0dy.<br/>
+release: freeRouter v26.1.13-cur, done by sprscc13@mrn0b0dy.<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>udp</b></td><td><b>dpdk</b></td><td><b>xdp</b></td><td><b>bmv2</b></td><td><b>tofino</b></td><td><b>test</b></td></tr></thead><tbody>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-acl001.tst">p4lang-acl001.tst</a></td><td class=good>ok</td><td class=good>ok</td><td class=bad>not ok</td><td class=good>ok</td><td class=good>ok</td><td>p4lang: copp</td></tr>
