@@ -1,6 +1,6 @@
 url;file;result;test
--;-;-;freeRouter v26.1.12-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-12 23:23:45, took 00:10:40, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
+-;-;-;freeRouter v26.1.13-cur, done by sprscc13@mrn0b0dy.
+-;-;-;2026-01-13 00:30:43, took 00:10:03, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
