@@ -9,8 +9,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v26.1.12-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-12 23:23:45, took 00:10:40, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v26.1.13-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2026-01-13 00:30:43, took 00:10:03, with 50 workers, on 857 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
