@@ -17874,3 +17874,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2026-01-10 18:07:18 26.1.10
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2026-01-13 00:05:54 26.1.13
+no qc pass: egress label filtering with pvrp
+failed: egress label filtering with pvrp
